# aloud-code

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml  rust.yml
commands/: off.md  on.md  release.md
hooks/: aloud-code.sh  hooks.json
src/: config.rs  formatter.rs  hook.rs  main.rs  webhook.rs
tests/: integration_test.rs
